<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/space_grotesk_bold"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#D3CFDE" />

    <TextView
        android:id="@+id/c346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/space_grotesk_medium"
        android:padding="10dp"
        android:text="@string/c346"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F7F7F7" />

    <TextView
        android:id="@+id/c206"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/space_grotesk_medium"
        android:text="@string/c206"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F7F7F7" />

    <TextView
        android:id="@+id/c203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/space_grotesk_medium"
        android:text="@string/c203"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F7F7F7" />

    <TextView
        android:id="@+id/c218"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/space_grotesk_medium"
        android:text="@string/c218"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F7F7F7" />

    <TextView
        android:id="@+id/c235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/space_grotesk_medium"
        android:text="@string/c235"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F7F7F7" />

</LinearLayout>