<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background2"
    tools:context="ActivityPage">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/space_grotesk_bold"
        android:text="Module Information"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#1D3B82" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/space_grotesk_semibold"
            android:padding="10dp"
            android:text="Code: "
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7" />

        <TextView
            android:id="@+id/infoCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/space_grotesk_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/space_grotesk_semibold"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7"
            android:text="@string/name" />

        <TextView
            android:id="@+id/infoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/space_grotesk_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/space_grotesk_semibold"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7"
            android:text="@string/year" />

        <TextView
            android:id="@+id/infoYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/space_grotesk_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSemester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/space_grotesk_semibold"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7"
            android:text="@string/semester" />

        <TextView
            android:id="@+id/infoSemester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/space_grotesk_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/space_grotesk_semibold"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7"
            android:text="@string/credit" />

        <TextView
            android:id="@+id/infoCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/space_grotesk_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvVenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/space_grotesk_semibold"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7"
            android:text="@string/venue" />

        <TextView
            android:id="@+id/infoVenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/space_grotesk_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F7F7F7"
            android:text="TextView" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/space_grotesk_medium"
        android:text="BACK"
        app:backgroundTint="#204092" />
</LinearLayout>